# dyad-lovable-saas

./: .env.example  LAUNCH_SUMMARY.md  PROGRESS_REPORT.md  README.md  docker-compose.yaml  package.json
apps/pwa/: index.html  package.json  vite.config.ts
apps/pwa/src/: App.tsx  index.css  main.tsx
backend/: api.py  pyproject.toml
backend/core/: __init__.py  config.py
backend/core/agents/: api.py
backend/core/ai_gateway/: api.py
backend/core/auth/: api.py
backend/core/billing/: api.py
backend/core/graphrag/: api.py
backend/core/sandbox/: api.py
backend/core/services/: redis.py  supabase.py
backend/core/storage/: api.py
backend/core/threads/: api.py
backend/core/utils/: logger.py
backend/supabase/: schema.sql
plans/: DYAD-CLOUD-MERGE.md
